--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ html {
 	font-family: 'Montserrat', sans-serif;
 	scroll-behavior: smooth;
 }
+.name{
+	background-color: aliceblue;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .profile img{
     padding-top: 200px;
     padding-bottom: 200px;
